--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.2.0-beta.3",
+    "element-plus": "^1.2.0-beta.5",
+    "normalize.css": "^8.0.1",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
