--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,26 @@
 {
   "compilerOptions": {
+    //目标代码
     "target": "esnext",
+    //目标代码需要使用的模块化方案
     "module": "esnext",
+    //严格模式
     "strict": true,
+    //对jsx的处理 preserve保留
     "jsx": "preserve",
+    //辅助的导入功能
     "importHelpers": true,
+    //按照node的方式解析模块
     "moduleResolution": "node",
+    //跳过一些库的类型检测
     "skipLibCheck": true,
+    //export default/module.export = {}
+    //es module/commonjs
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    //要不要生成映射文件
     "sourceMap": true,
+    //文件路径解析时，基本url
     "baseUrl": ".",
     "types": ["webpack-env"],
     "paths": {
